# inboxed

./: .env.example  .gitignore  Procfile  README.md  SETUP.md  SPEC.md  render.yaml  test_contacts.csv
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: auth.py  campaigns.py  contacts.py  domains.py  stats.py  webhooks.py
backend/app/core/: bio_enrich.py  domains.py  enrich.py  finder.py  generate.py  ingest.py  models.py  replies.py  send.py  suggest_domains.py  suppress.py  verify.py
backend/app/utils/: email_format.py  text.py  time_window.py
backend/app/worker/: run_tick_once.py  runner.py  tick.py  warmup.py
backend/tests/: conftest.py  test_domains.py  test_email_format.py  test_ingest.py  test_prep_pipeline.py  test_suggest_domains.py  test_tick.py  test_verify.py  test_warmup.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/lib/: api.test.ts  api.ts  stores.ts  supabase.ts
frontend/src/lib/components/: Card.svelte  DomainCard.svelte  DropZone.svelte  EmailPreviewCard.svelte  LimitInput.svelte  ProgressLine.svelte  StatPill.svelte  StepHeader.svelte  StepNav.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/campaigns/: +page.svelte
frontend/src/routes/campaigns/[id]/: +page.svelte
frontend/src/routes/campaigns/[id]/contacts/: +page.svelte
frontend/src/routes/campaigns/[id]/domains/: +page.svelte
migrations/: 001_schema.sql  002_rls.sql  003_functions.sql  004_domains_campaign_scope.sql
tasks/: lessons.md  todo.md
(+6 files in other folders)
