[project]
name = "inboxed-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.26.0",
    "apscheduler>=3.10.0",
    "beautifulsoup4>=4.12.0",
    "fastapi[standard]>=0.111.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "pydantic-settings>=2.2.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "resend>=2.0.0",
    "supabase>=2.4.0",
    "uvicorn[standard]>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
